# prog-edu-assistant

./: .gitignore  BUGS.txt  README.md  TODO.txt  WORKSPACE  build-student.sh  deploy-docker.sh  prepare-for-demo.sh  push-docker.sh  push-student.sh  rebuild.sh  start-servers-no-docker.sh  start-servers.sh
assign/: README.md  go.mod
assign/cmd/: BUILD.bazel  assign.go
assign/notebook/: BUILD.bazel  notebook.go  notebook_test.go
autograder/cmd/: tool.go
autograder/unittest/: README.md
deploy/: .gitignore  README.md  docker-compose.yml  secret.env.template
docker/: build.sh  docker-compose.yml
docker/server/: Dockerfile
docker/worker/: .gitignore  Dockerfile
exercises/: BUILD.bazel  README.md  dataframe-main-en-master.ipynb  dataframe-pre1-en-master.ipynb  dataframe-pre1-en-student.ipynb  dataframe-pre1-master.ipynb  dataframe-pre2-en-master.ipynb  dataframe-pre2-master.ipynb  dataframe-pre3-en-master.ipynb  dataframe-pre3-master.ipynb  dataframe-scrape-weather-data.ipynb  dataframe1-en-master.ipynb  defs.bzl  functional-ja-master.ipynb  helloworld-check.py  helloworld-en-master.ipynb  helloworld-en.ipynb  helloworld.ipynb  oop-1-en-master.ipynb  oop-en-master.ipynb  oop-en.ipynb
go/: .gitignore  build-binaries.sh  go.mod  start-servers.sh
go/autograder/: NOTES.txt  autograder.go
go/cmd/assign/: assign.go
go/cmd/grade/: grade.go
go/cmd/post/: post.go
go/cmd/uploadserver/: BUILD.bazel  main.go
go/cmd/worker/: BUILD.bazel  worker.go
go/notebook/: BUILD.bazel  notebook.go  notebook_test.go
go/uploadserver/: .gitignore  BUILD.bazel  uploadserver.go
nbextensions/: README.md
nbextensions/upload_it/: README.md  main.js
python/prog_edu_assistant_tools/: README.md
python/prog_edu_assistant_tools/prog_edu_assistant_tools/: magics.py  summary_test_result.py
server/: README.md
server/auth/: oauth-server.go
server/upload/: .gitignore  README.md  go.mod
server/upload/cmd/server/: main.go
server/upload/cmd/uploadserver/: main.go
server/upload/server/: server.go
server/upload/uploadserver/: server.go  uploadserver.go
student/: README.md
worker/: README.md  go.mod
worker/autograder/: autograder.go
worker/cmd/grade/: grade.go
worker/cmd/post/: post.go
worker/cmd/tool/: tool.go
worker/cmd/worker/: worker.go
