# TODO(salikh): Create a custom bazel build rule for declaring master notebooks
# and deliverables produced from them.

genrule(
    name = "helloworld-en-student",
    srcs = [
        "helloworld-en-master.ipynb",
    ],
    outs = ["helloworld-en-student.ipynb"],
    cmd = """$(location //go/cmd/assign) --input="$<" --output="$@" --command=student""",
    tools = [
        "//go/cmd/assign",
    ],
)

genrule(
    name = "helloworld-en-autograder",
    srcs = [
        "helloworld-en-master.ipynb",
    ],
    outs = ["helloworld-en-autograder"],
    cmd = """$(location //go/cmd/assign) --input="$<" --output="$@" --command=autograder""",
    tools = [
        "//go/cmd/assign",
    ],
)
