package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "uploadserver",
    srcs = ["main.go"],
    importpath = "github.com/google/prog-edu-assistant/cmd/uploadserver",
    deps = [
        "@com_github_golang_glog//:go_default_library",
	"//go/queue",
        "//go/uploadserver",
    ],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "docker",
    srcs = ["main.go"],
    importpath = "github.com/google/prog-edu-assistant/cmd/uploadserver",
    deps = [
        "@com_github_golang_glog//:go_default_library",
	"//go/queue",
        "//go/uploadserver",
    ],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    base = "@alpine_with_bash//image",
)

