package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "worker",
    srcs = ["worker.go"],
    importpath = "github.com/google/prog-edu-assistant/cmd/worker",
    deps = [
        "@com_github_golang_glog//:go_default_library",
	"//go/queue",
        "//go/autograder",
    ],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
)
